# opensight

./: .gitignore  .travis.yml  README.md  package-lock.json  postgres-compose.yml  quickstart-compose.yml  run_rocket.sh
analytics_api/: .env  .gitignore  .travis.yml  Cargo.toml  README.md  Rocket.toml  conf.toml  config.toml  deploy.yml  docker_run.sh  dockerfile  example_conf.toml  generator.py  generator_dockerfile  image_builder.sh  run_rocket.sh
analytics_api/migrations/2021-08-09-194129_analytics/: up.sql
analytics_api/migrations/2021-08-09-194432_applications/: up.sql
analytics_api/migrations/2021-08-09-194544_user_access/: down.sql  up.sql
analytics_api/migrations/2021-09-05-122421_analytics/: down.sql  up.sql
analytics_api/migrations/2021-09-17-202821_analytics/: up.sql
analytics_api/migrations/2022-02-15-144539_analytics/: up.sql
analytics_api/migrations/2022-02-15-180356_session/: down.sql  up.sql
analytics_api/migrations/2022-02-17-221404_session/: up.sql
analytics_api/migrations/2022-02-18-105158_analytics/: down.sql  up.sql
analytics_api/migrations/2022-02-18-195634_session/: up.sql
analytics_api/scirpts/: bake_conf.sh
analytics_api/scripts/: bake_conf.sh
analytics_api/src/: admin_handler.rs  analyse.rs  analyse_handler.rs  analytics.rs  analytics_dao.rs  application.rs  application_dao.rs  cache.rs  cors.rs  dao.rs  db.rs  handler.rs  health.rs  logs.rs  main.rs  migration.rs  schema.rs  session_dao.rs  settings.rs  time_helper.rs
analytics_api/src/daos/: analytics_dao.rs  mod.rs  session_dao.rs
analytics_api/src/endpoints/: analyse_handler.rs  handler.rs  mod.rs
analytics_api/tests/: analyse.json  integration_tests.rs
core/: .gitignore  Cargo.toml  build.rs  conf.toml  docker_run.sh  dockerfile  example_conf.toml
core/migrations/2021-12-12-151836_application/: up.sql
core/migrations/2021-12-12-212102_user_group/: down.sql  up.sql
core/migrations/2021-12-12-212746_user/: down.sql  up.sql
core/migrations/2022-04-21-065813_projects/: up.sql
core/migrations/2022-04-30-175013_user/: down.sql  up.sql
core/proto/: app.proto
core/scripts/: bake_conf.sh
core/src/: application.rs  application_dao.rs  db.rs  handle.rs  health.rs  health_dao.rs  main.rs  project.rs  schema.rs  user.rs  user_dao.rs
core/src/daos/: application_dao.rs  mod.rs  (+2 more)
event_api/: Cargo.toml
(+240 files in other folders)
