[package]
name = "core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"
serde_derive = "1.0.92"
log = "0.4.14"
env_logger = "0.8.4"
chrono = { version = "0.4.10", features = ["serde"] }
config = "0.11.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
diesel_migrations = "1.4.0"
log4rs = "1.0.0"
rocket_okapi = "0.5"
schemars = "0.7"
okapi = { version = "0.4", features = ["derive_json_schema"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json", "tls"]