[package]
name = "event_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"
log = "0.4.14"
env_logger = "0.8.4"
chrono = { version = "0.4.10", features = ["serde"] }
config = "0.11.0"
[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["postgres_pool"]
